@@ -38,9 +38,23 @@ This program allow you to download movie subtitles from http://www.opensubtitles
 
 ## TODO
 
+- #22: Change OpenSubtitles API from RPC to REST [deadline: end of 2023]
 - #21: Support Java11+
-- #20: Make all communication with OpenSubtitles over https
+- ~~#20: Make all communication with OpenSubtitles over https~~
 - #19: Fix preferences storage
 - #18: Speedup startup
 - #17: Add support for NapiProjekt database
 - #16: Add support for Napisy24 database
+
+## Build tips
+
+To run in Intellij add to VM arguments
+```
+--module-path C:\Users\Rafal\.jdks\openjfx-20_windows-x64_bin-sdk\javafx-sdk-20\lib --add-modules javafx.controls,javafx.fxml
+```
+
+To run via gradle:
+```
+gradlew run
+```
+
